tests/ui/06-params.stderr
error: required a string literal
 --> $DIR/06-params.rs:4:18
  |
4 | #[rye(rye_path = 10)]
  |                  ^^

error: duplicated parameter
  --> $DIR/06-params.rs:13:7
   |
13 | #[rye(rye_path = "rye")]
   |       ^^^^^^^^^^^^^^^^

error: unknown parameter name
  --> $DIR/06-params.rs:17:7
   |
17 | #[rye(the_quick_fox = "lazy")]
   |       ^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type or module `catcher_in_the_rye`
 --> $DIR/06-params.rs:8:18
  |
8 | #[rye(rye_path = "catcher_in_the_rye")]
  |                  ^^^^^^^^^^^^^^^^^^^^ use of undeclared type or module `catcher_in_the_rye`
